Apache Airflow Projects/Analytics Olympiad 2022/logs/dag_id=analytics_olympiad-v01/run_id=scheduled__2023-12-01T00:00:00+00:00/task_id=remove_outliers_past_accidents/attempt=1.log
[2023-12-19T04:13:22.117+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: analytics_olympiad-v01.remove_outliers_past_accidents scheduled__2023-12-01T00:00:00+00:00 [queued]>
[2023-12-19T04:13:22.121+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: analytics_olympiad-v01.remove_outliers_past_accidents scheduled__2023-12-01T00:00:00+00:00 [queued]>
[2023-12-19T04:13:22.121+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 6
[2023-12-19T04:13:22.126+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): remove_outliers_past_accidents> on 2023-12-01 00:00:00+00:00
[2023-12-19T04:13:22.130+0000] {standard_task_runner.py:57} INFO - Started process 1368 to run task
[2023-12-19T04:13:22.132+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'analytics_olympiad-v01', 'remove_outliers_past_accidents', 'scheduled__2023-12-01T00:00:00+00:00', '--job-id', '13', '--raw', '--subdir', 'DAGS_FOLDER/Analytics Olympiad 2022.py', '--cfg-path', '/tmp/tmpwm3dniny']
[2023-12-19T04:13:22.134+0000] {standard_task_runner.py:85} INFO - Job 13: Subtask remove_outliers_past_accidents
[2023-12-19T04:13:22.164+0000] {task_command.py:416} INFO - Running <TaskInstance: analytics_olympiad-v01.remove_outliers_past_accidents scheduled__2023-12-01T00:00:00+00:00 [running]> on host 7b1718a25f0c
[2023-12-19T04:13:22.203+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='dunnbc22' AIRFLOW_CTX_DAG_ID='analytics_olympiad-v01' AIRFLOW_CTX_TASK_ID='remove_outliers_past_accidents' AIRFLOW_CTX_EXECUTION_DATE='2023-12-01T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-12-01T00:00:00+00:00'
[2023-12-19T04:13:22.204+0000] {sql.py:274} INFO - Executing: -- params: table_name, col_name, bool_value_gt
DELETE FROM analytics_olympiad_pipeline
WHERE PAST_ACCIDENTS  5;
[2023-12-19T04:13:22.209+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-12-19T04:13:22.214+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-12-19T04:13:22.220+0000] {sql.py:418} INFO - Running statement: -- params: table_name, col_name, bool_value_gt
DELETE FROM analytics_olympiad_pipeline
WHERE PAST_ACCIDENTS  5;, parameters: None
[2023-12-19T04:13:22.222+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "5"
LINE 3: WHERE PAST_ACCIDENTS  5;
                              ^

[2023-12-19T04:13:22.228+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=analytics_olympiad-v01, task_id=remove_outliers_past_accidents, execution_date=20231201T000000, start_date=20231219T041322, end_date=20231219T041322
[2023-12-19T04:13:22.232+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 13 for task remove_outliers_past_accidents (syntax error at or near "5"
LINE 3: WHERE PAST_ACCIDENTS  5;
                              ^
; 1368)
[2023-12-19T04:13:22.272+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-12-19T04:13:22.294+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
